@@ -1,3 +1,8 @@
+2008-01-07  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file.cc:
+	Simplified gnome_cmd_file_get_extension()
+
 2008-01-06  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file-selector.cc:
